@@ -1,18 +1,45 @@
 package com.greencity.ui;
 
+import com.greencity.jdbc.entity.EcoNewsEntity;
+import com.greencity.jdbc.services.EcoNewsService;
+import com.greencity.ui.components.baseComponents.CancelConfirmModal;
 import com.greencity.ui.elements.NewsTags;
 import com.greencity.ui.pages.CreateEditNewsPage;
 import com.greencity.ui.pages.econewspage.EcoNewsPage;
 import com.greencity.ui.pages.homepage.HomePage;
 import com.greencity.ui.testrunners.TestRunnerWithUser;
+import io.qameta.allure.Description;
+import io.qameta.allure.Feature;
+import io.qameta.allure.Issue;
+import io.qameta.allure.Owner;
 import org.openqa.selenium.Keys;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 import org.testng.asserts.SoftAssert;
+
+import java.util.List;
 
 import static com.greencity.ui.pages.CreateEditNewsPage.generateText;
 
 public class ValidateContentFieldTest extends TestRunnerWithUser {
 
+    private EcoNewsService ecoNewsService;
+
+    @BeforeClass
+    public void init() {
+        this.ecoNewsService = new EcoNewsService(
+                testValueProvider.getJDBCGreenCityUsername(),
+                testValueProvider.getJDBCGreenCityPassword(),
+                testValueProvider.getJDBCGreenCityURL()
+        );
+    }
+
+
+    @Issue("17")
+    @Owner("Maryna Rasskazova")
+    @Description("Verify the validation of Content field if less than 20 characters are entered")
+    @Feature("Create News")
     @Test
     public void verifyTooShortTextInContentField() {
 
@@ -40,9 +67,15 @@ public class ValidateContentFieldTest extends TestRunnerWithUser {
                 "The actual Content Info message text does not match the expected text.");
         softAssert.assertTrue(createEditNewsPage.getContentInfoMessage().getAttribute("class").contains("warning"));
         softAssert.assertFalse(createEditNewsPage.getPublishButton().isEnabled());
+        driver.navigate().back();
         softAssert.assertAll();
+
     }
 
+    @Issue("17")
+    @Owner("Maryna Rasskazova")
+    @Description("Verify the validation of Content field if more than 63206 characters are entered")
+    @Feature("Create News")
     @Test
     public void verifyTooLongTextInContentField() {
 
@@ -79,8 +112,8 @@ public class ValidateContentFieldTest extends TestRunnerWithUser {
         String actualContentCounterText = createEditNewsPage.getContentCounter().getText();
         String expectedContentCounterText = "Number of characters: 63206";
 
-       String actualContentCounterColor = createEditNewsPage.getContentCounter().getCssValue("color");
-       String expectedContentCounterColor = "rgba(100, 114, 125, 1)";
+        String actualContentCounterColor = createEditNewsPage.getContentCounter().getCssValue("color");
+        String expectedContentCounterColor = "rgba(100, 114, 125, 1)";
 
         softAssert.assertEquals(actualContentCounterText, expectedContentCounterText,
                 "The actual Content counter text does not match the expected text.");
@@ -89,10 +122,15 @@ public class ValidateContentFieldTest extends TestRunnerWithUser {
                 "The actual Content Info message color does not match the expected color.");
 
         softAssert.assertTrue(createEditNewsPage.getPublishButton().isEnabled(), "Publish button should be enabled");
-
+        driver.navigate().back();
         softAssert.assertAll();
+
     }
 
+    @Issue("17")
+    @Owner("Maryna Rasskazova")
+    @Description("Verify that text between 20 and 63206 characters in the Content field is accepted")
+    @Feature("Create News")
     @Test
     public void verifyValidLengthTextInContentField() {
 
@@ -107,16 +145,29 @@ public class ValidateContentFieldTest extends TestRunnerWithUser {
                 .enterTitle(title)
                 .clickTag(NewsTags.EDUCATION_TAG)
                 .enterContent(textWithValidLength)
-                .getPublishButton().click();
+                .clickPublish()
+                .refreshPage();
 
         EcoNewsPage ecoNewsPage = new EcoNewsPage(driver);
+        List<EcoNewsEntity> ecoNewsEntities = ecoNewsService.getNewsByUserId(testValueProvider.getLocalStorageUserId());
 
-        String actualTitleOfFirstNews = ecoNewsPage.getNewsComponents().get(0).getTitle().getText();
+        String actualTitleOfFirstNews = ecoNewsPage.getNewsComponents().getFirst().getTitle().getText();
 
         SoftAssert softAssert = new SoftAssert();
         softAssert.assertTrue(driver.getCurrentUrl().contains("/news"), "EcoNews Page is not opened");
 
         softAssert.assertEquals(actualTitleOfFirstNews, title);
+        softAssert.assertEquals(ecoNewsEntities.getLast().getTitle(), title);
+
         softAssert.assertAll();
     }
+    @AfterMethod
+    public void closeCancelModalIfPresent() {
+        CreateEditNewsPage createEditNewsPage=new CreateEditNewsPage(driver);
+        CancelConfirmModal modal = createEditNewsPage.getCancelConfirmModal();
+        if (modal != null && modal.isDisplayed()) {
+            modal.clickYesCancel();
+        }
+    }
+
 }
